force-app/main/default/objects/CA10__CaAwsInstance__c/fields/caOpt_breezeHostInfoBootTime__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoBootTime__c</fullName>
    <label>Breeze: Boot Time</label>
    <type>DateTime</type>
</CustomField>