force-app/main/default/objects/CA10__CaAwsInstance__c/fields/caOpt_breezeHostInfoCpuCoreCount__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoCpuCoreCount__c</fullName>
    <label>Breeze: CPU Core Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>