force-app/main/default/objects/CA10__CaAwsInstance__c/fields/caOpt_breezeHostInfoCpuModel__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoCpuModel__c</fullName>
    <label>Breeze: CPU Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>