force-app/main/default/objects/CA10__CaAwsInstance__c/fields/caOpt_breezeHostInfoCpuProcessorCount__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoCpuProcessorCount__c</fullName>
    <label>Breeze: CPU Processor Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>