force-app/main/default/objects/CA10__CaAwsInstance__c/fields/caOpt_breezeHostInfoHostname__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoHostname__c</fullName>
    <label>Breeze: Hostname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>