force-app/main/default/objects/CA10__CaAwsInstance__c/fields/caOpt_breezeHostInfoIpAddress__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoIpAddress__c</fullName>
    <label>Breeze: IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>