force-app/main/default/objects/CA10__CaAwsInstance__c/fields/caOpt_breezeHostInfoOs__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoOs__c</fullName>
    <label>Breeze: OS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>