force-app/main/default/objects/CA10__CaAwsInstance__c/fields/caOpt_breezeHostInfoSubnet__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoSubnet__c</fullName>
    <label>Breeze: Subnet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>