force-app/main/default/objects/CA10__CaAwsInstance__c/fields/caOpt_breezeHostInfoSubnetMask__c.field-meta.xml
<CustomField>
    <fullName>caOpt_breezeHostInfoSubnetMask__c</fullName>
    <label>Breeze: Subnet Mask</label>
    <length>255</length>
    <type>Text</type>
</CustomField>