force-app/main/default/objects/CA10__CaAwsInstance__c/fields/caTag_Environment__c.field-meta.xml
<CustomField>
    <fullName>caTag_Environment__c</fullName>
    <inlineHelpText>CaTag: &quot;Environment&quot;</inlineHelpText>
    <label>CEB Environment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>